[metadata]
name = pyrpn
summary = rpn calculator
author = Tong Zhang
author-email = zhangtong@sinap.ac.cn
license = mit
home-page = https://github.com/Archman/pyrpn
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    # Development Status :: 4 - Beta
    Programming Language :: Python
    Operating System :: POSIX :: Linux

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = pyrpn.module:function
# For example:
# console_scripts =
#     fibonacci = pyrpn.skeleton:run
# as well as other entry_points.


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    pyrpn
# data_files =
#    share/pyrpn_docs = docs/*

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
